--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -153,7 +153,7 @@ textarea {
 
 <div class="container">
 
-    <p>Logged in as <b>{{ session['username'] }}</b></p>
+    <p>Logged in as <b>{{ session['email'] }}</b></p>
 
     <h1>Focus Session</h1>
     <p>Enter your study duration & a YouTube focus video</p>
