--- a/templates/floxenstudyhours.html
+++ b/templates/floxenstudyhours.html
@@ -46,8 +46,8 @@
         <div class="container" id="register-section">
             <h1>Register</h1>
             <form action="{{ url_for('register') }}" method="POST" id="register-form">
-                <input type="text" name="username" placeholder="Name" required>
-             <!--<input type="email" id="email" placeholder="Email" required> -->
+                <!--<input type="text" name="username" placeholder="Name" required> -->
+                <input type="email" name="email" id="email" placeholder="Enter your Gmail" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <button type="submit"><b>Register</b></button>
             </form>
