--- a/templates/login.html
+++ b/templates/login.html
@@ -169,8 +169,8 @@
                 <h1>Login to FloxenStudyHours</h1>
 
                 <form action="{{ url_for('login') }}" method="POST">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" required>
+                    <label for="email">Gmail</label>
+                    <input type="email" id="email" name="email" placeholder="example@gmail.com" required>
 
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
@@ -181,6 +181,7 @@
                 <p>Don’t have an account?
                     <a href="{{ url_for('register') }}">Register here</a>
                 </p>
+
 
             </div>
 
