--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -108,6 +108,8 @@
         }
 
         #video-container iframe {
+            width: 100%;
+            height: 380px;
             margin-top: 25px;
             border-radius: 15px;
             box-shadow: 0 15px 30px rgba(0,0,0,0.25);
