--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Contact | FloxenStudyHours</title>
+  <link rel="canonical" href="https://www.floxenstudyhours.com/focus">
 </head>
 <body>
 
