--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,7 @@
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183701268775294"
         crossorigin="anonymous">
     </script>
-
+    <link rel="canonical" href="https://www.floxenstudyhours.com/focus">
     <style>
         * {
             box-sizing: border-box;
