Add canonical link to privacy policy page

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -17,6 +17,7 @@
             color: #444;
         }
     </style>
+    <link rel="canonical" href="https://www.floxenstudyhours.com/focus">
 </head>
 <body>
 
