--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login | FloxenStudyHours</title>
-        <link rel="canonical" href="https://www.floxenstudyhours.com/focus">
+        <link rel="canonical" href="https://www.floxenstudyhours.com/">
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
