--- a/templates/floxenstudyhours.html
+++ b/templates/floxenstudyhours.html
@@ -11,7 +11,7 @@
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183701268775294"
         crossorigin="anonymous">
     </script>
-    <link rel="canonical" href="https://www.floxenstudyhours.com/focus">
+    <link rel="canonical" href="https://www.floxenstudyhours.com/">
      <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
