Add canonical link to terms.html

--- a/templates/terms.html
+++ b/templates/terms.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Terms & Conditions | FloxenStudyHours</title>
+  <link rel="canonical" href="https://www.floxenstudyhours.com/">
 </head>
 <body>
 
