add google adsense code

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,6 +3,8 @@
 <head>
   <title>Contact | FloxenStudyHours</title>
   <link rel="canonical" href="https://floxenstudyhours.com/">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183701268775294"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
