--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -17,6 +17,8 @@
             color: #444;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183701268775294"
+     crossorigin="anonymous"></script>
     <link rel="canonical" href="https://www.floxenstudyhours.com/">
 </head>
 <body>
