--- a/templates/terms.html
+++ b/templates/terms.html
@@ -3,6 +3,8 @@
 <head>
   <title>Terms & Conditions | FloxenStudyHours</title>
   <link rel="canonical" href="https://www.floxenstudyhours.com/">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183701268775294"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
