--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login | FloxenStudyHours</title>
-        <link rel="canonical" href="https://floxenstudyhours.com/">
+        <link rel="canonical" href="https://floxenstudyhours.com/login">
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2183701268775294"
-     crossorigin="anonymous"></script>
+
         <style>
         * {
             box-sizing: border-box;
